[metadata]
name = ORCA-parser
version = 0.0.1
author = Moritz Sallermann
author_email = m.sallermann@fz-juelich.de
description = A simple python script to parse data from the quantum chemistry code ORCA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MSallermann/ORCA_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
[options.packages.find]
where = src